# rusty-iconz

./: .gitignore  Cargo.toml  LICENSE.md  README.md  readme.md
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
deprecated/: magic.rs  old-main.rs
src/: cli.rs  icon.rs  lib.rs  main.rs  native.rs  xcassets.rs
tests/: clean.sh
