[package]
name = "iconz"
version = "0.2.2"
authors = ["Zeeshan Hooda <me@zeeshan.wtf>"]
license = "MIT"
description = "A simple CLI to generate all the necessary Xcode icon sizes from one single source file"
homepage = "https://github.com/zhooda/rusty-iconz"
repository = "https://github.com/zhooda/rusty-iconz"
readme = "README.md"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
image = "0.23.4"
structopt = "0.2.15"
colored = "1.9.3"
