[package]
name = "iconz"
version = "0.3.0 beta"
authors = ["Zeeshan Hooda <me@zeeshan.wtf>"]
license = "MIT"
description = "A simple CLI to generate all the necessary Xcode icon sizes from one single source file"
homepage = "https://github.com/zhooda/rusty-iconz"
repository = "https://github.com/zhooda/rusty-iconz"
readme = "README.md"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
structopt = "0.2.15"
colored = "1.9.3"
serde_json = "1.0.55"
serde = { version = "1.0.111", features = ["derive"] }
